# mdk

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md  flake.nix  justfile
.cursor/rules/: marmot.mdc  mls.mdc  nostr.mdc  rust.mdc
.github/workflows/: ci.yml  coverage.yml  package-mdk-bindings.yml
crates/mdk-core/: CHANGELOG.md  Cargo.toml
crates/mdk-core/docs/: resources.md
crates/mdk-core/examples/: group_inspection.rs  key_package_inspection.rs  mls_memory.rs  mls_sqlite.rs
crates/mdk-core/src/: constant.rs  error.rs  extension.rs  groups.rs  key_packages.rs  lib.rs  messages.rs  prelude.rs  test_util.rs  util.rs  welcomes.rs
crates/mdk-core/src/encrypted_media/: crypto.rs  manager.rs  metadata.rs  mod.rs  types.rs  validation.rs
crates/mdk-core/src/extension/: group_image.rs  mod.rs  types.rs
crates/mdk-core/src/image_processing/: metadata.rs  mod.rs  types.rs  validation.rs
crates/mdk-core/src/media_processing/: metadata.rs  validation.rs
crates/mdk-memory-storage/: CHANGELOG.md  Cargo.toml  README.md
crates/mdk-memory-storage/src/: groups.rs  lib.rs  messages.rs  welcomes.rs
crates/mdk-sqlite-storage/: CHANGELOG.md  Cargo.toml
crates/mdk-sqlite-storage/migrations/: V100__initial.sql
crates/mdk-sqlite-storage/src/: db.rs  groups.rs  lib.rs  messages.rs  migrations.rs  welcomes.rs
crates/mdk-storage-traits/: CHANGELOG.md  Cargo.toml  README.md
crates/mdk-storage-traits/src/: group_id.rs  lib.rs  test_utils.rs
crates/mdk-storage-traits/src/groups/: mod.rs  types.rs
crates/mdk-storage-traits/src/messages/: types.rs
crates/mdk-storage-traits/src/welcomes/: types.rs
crates/mdk-storage-traits/tests/: cross_storage.rs  memory_storage.rs  sqlite_storage.rs
crates/mdk-storage-traits/tests/shared/: group_tests.rs  message_tests.rs  mod.rs  welcome_tests.rs
crates/mdk-uniffi/: Cargo.toml  uniffi.toml
crates/mdk-uniffi/src/: README.md  lib.rs
crates/mdk-uniffi/src/kotlin/: .gitignore  Readme.md  build.gradle.kts  consumer-rules.pro  docs.md  gradle.properties  jitpack.yml  pom.xml  proguard-rules.pro  settings.gradle.kts
crates/mdk-uniffi/src/kotlin/gradle/wrapper/: gradle-wrapper.properties
crates/mdk-uniffi/src/kotlin/src/main/: AndroidManifest.xml
crates/mdk-uniffi/src/kotlin/src/main/java/org/parres/mdk/: JnaInit.java
crates/mdk-uniffi/src/kotlin/src/main/res/values/: strings.xml
crates/mdk-uniffi/src/python/: __init__.py  docs.md  pyproject.toml
crates/mdk-uniffi/src/python/mdk/: __init__.py  version.py
crates/mdk-uniffi/src/ruby/: docs.md  mdk.gemspec
crates/mdk-uniffi/src/ruby/lib/: mdk.rb
crates/mdk-uniffi/src/ruby/lib/mdk/: version.rb
crates/mdk-uniffi/src/swift/: Package.swift  docs.md
docs/: DEVELOPMENT.md  swift-package.md
docs/mls/: draft-ietf-mls-extensions-08.txt
scripts/: check-all.sh  check-clippy.sh  check-docs.sh  check-fmt.sh  check-msrv.sh  coverage.sh  extract-coverage.sh  package-swift.sh  run-swift-binding-test.sh  swift-binding-test.swift
