[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Jeff Gardner <j@jeffg.me>", "MDK Developers"]
homepage = "https://github.com/parres-hq/mdk"
repository = "https://github.com/parres-hq/mdk.git"
license = "MIT"
rust-version = "1.85.0"

[workspace.dependencies]
# Internal crates
mdk-memory-storage = { version = "0.5.0", path = "./crates/mdk-memory-storage", default-features = false }
mdk-sqlite-storage = { version = "0.5.0", path = "./crates/mdk-sqlite-storage", default-features = false }
mdk-storage-traits = { version = "0.5.0", path = "./crates/mdk-storage-traits", default-features = false }
mdk-core = { version = "0.5.0", path = "./crates/mdk-core", default-features = false }

# OpenMLS family
openmls = { version = "0.7.1", default-features = false }
openmls_traits = { version = "0.4.1", default-features = false }
openmls_basic_credential = { version = "0.4.1", default-features = false }
openmls_rust_crypto = { version = "0.4.1", default-features = false }
openmls_memory_storage = { version = "0.4.1", default-features = false }
openmls_sqlite_storage = { version = "0.1.1", default-features = false }

# Nostr
nostr = { version = "0.43", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
tls_codec = "0.4"

# Cryptography
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Image processing (optional features)
image = { version = "0.25", default-features = false }
blurhash = "0.2"
kamadak-exif = "0.6"

# Storage
rusqlite = "0.32"
refinery = "0.8"

# Utilities
hex = { version = "0.4", default-features = false }
lru = { version = "0.16", default-features = false }
parking_lot = "0.12"
thiserror = "2"

# Async
tokio = { version = ">=1.37", default-features = false }

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"

# Testing
tempfile = "3.20"
rand = "0.9.2"
