[package]
name = "mdk-core"
version = "0.5.0"
edition = "2021"
description = "A simplified interface to build secure messaging apps on nostr with MLS."
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.85.0"
keywords = ["nostr", "mls", "openmls"]

[features]
default = []
mip04 = ["dep:image", "dep:blurhash", "dep:chacha20poly1305", "dep:hkdf", "dep:sha2", "dep:kamadak-exif"]

[dependencies]
hex = { workspace = true, features = ["std"] }
nostr = { workspace = true, features = ["std", "nip44"] }
mdk-storage-traits.workspace = true
openmls = { version = "0.7.0", default-features = false }
openmls_basic_credential = { version = "0.4.0", default-features = false }
openmls_rust_crypto = { version = "0.4.0", default-features = false }
openmls_traits = { version = "0.4.0", default-features = false }
serde = { workspace = true, features = ["derive"] }
tls_codec = "0.4"
tracing = { workspace = true, features = ["std"] }

# Optional dependencies for encrypted-media feature
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "webp", "gif"] }
blurhash = { version = "0.2", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
kamadak-exif = { version = "0.6", optional = true }
thiserror = "1.0"

[dev-dependencies]
mdk-storage-traits = { workspace = true, features = ["test-utils"] }
mdk-memory-storage.workspace = true
mdk-sqlite-storage.workspace = true
rand = "0.9.2"
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "mls_memory"
path = "examples/mls_memory.rs"

[[example]]
name = "mls_sqlite"
path = "examples/mls_sqlite.rs"
