[package]
name = "mdk-core"
version = "0.5.0"
edition = "2021"
description = "A simplified interface to build secure messaging apps on nostr with MLS."
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.85.0"
keywords = ["nostr", "mls", "openmls"]

[features]
default = []
mip04 = ["dep:image", "dep:blurhash", "dep:kamadak-exif"]

[dependencies]
hex = { workspace = true, features = ["std"] }
nostr = { workspace = true, features = ["std", "nip44"] }
mdk-storage-traits.workspace = true
openmls = { version = "0.7.0", default-features = false }
openmls_basic_credential = { version = "0.4.0", default-features = false }
openmls_rust_crypto = { version = "0.4.0", default-features = false }
openmls_traits = { version = "0.4.0", default-features = false }
serde = { workspace = true, features = ["derive"] }
tls_codec = "0.4"
tracing = { workspace = true, features = ["std"] }
thiserror = "1.0"

# Crypto dependencies for MIP-01 (group image encryption) - mandatory
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Optional dependencies for MIP-04 (encrypted media) feature
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "webp", "gif"] }
blurhash = { version = "0.2", optional = true }
kamadak-exif = { version = "0.6", optional = true }

[dev-dependencies]
mdk-storage-traits = { workspace = true, features = ["test-utils"] }
mdk-memory-storage.workspace = true
mdk-sqlite-storage.workspace = true
rand = "0.9.2"
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "mls_memory"
path = "examples/mls_memory.rs"

[[example]]
name = "mls_sqlite"
path = "examples/mls_sqlite.rs"
