[package]
name = "mdk-core"
version = "0.5.1"
edition = "2024"
description = "A simplified interface to build secure messaging apps on nostr with MLS."
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.90.0"
keywords = ["nostr", "mls", "openmls"]

[features]
default = []
mip04 = ["dep:image", "dep:blurhash"]

[dependencies]
hex = { workspace = true, features = ["std"] }
nostr = { workspace = true, features = ["std", "nip44"] }
mdk-storage-traits.workspace = true
openmls.workspace = true
openmls_basic_credential.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
serde = { workspace = true, features = ["derive"] }
tls_codec.workspace = true
tracing = { workspace = true, features = ["std"] }
thiserror.workspace = true

# Crypto dependencies for MIP-01 (group image encryption) - mandatory
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true

# Optional dependencies for MIP-04 (encrypted media) feature
image = { workspace = true, optional = true, features = ["jpeg", "png", "webp", "gif"] }
blurhash = { workspace = true, optional = true }

[dev-dependencies]
mdk-storage-traits = { workspace = true, features = ["test-utils"] }
mdk-memory-storage.workspace = true
mdk-sqlite-storage.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "mls_memory"
path = "examples/mls_memory.rs"

[[example]]
name = "mls_sqlite"
path = "examples/mls_sqlite.rs"
