[package]
name = "mdk-memory-storage"
version = "0.5.0"
edition = "2021"
description = "In-memory database for nostr-mls that implements the MdkStorageProvider Trait"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.80.0"
keywords = ["nostr", "mls", "openmls", "memory"]

[dependencies]
lru.workspace = true
nostr = { workspace = true, features = ["std"] }
mdk-storage-traits.workspace = true
openmls = { version = "0.7.0", default-features = false }
openmls_memory_storage = { version = "0.4.0", default-features = false }
parking_lot = "0.12"

[dev-dependencies]
mdk-storage-traits = { workspace = true, features = ["test-utils"] }
