[package]
name = "mdk-sqlite-storage"
version = "0.5.1"
edition = "2024"
description = "Sqlite database for nostr-mls that implements the MdkStorageProvider Trait"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.90.0"
keywords = ["nostr", "mls", "openmls", "sqlite"]

[dependencies]
mdk-storage-traits.workspace = true
nostr = { workspace = true, features = ["std"] }
openmls.workspace = true
openmls_sqlite_storage.workspace = true
refinery = { workspace = true, features = ["rusqlite"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing = { workspace = true, features = ["std"] }

[dev-dependencies]
mdk-storage-traits = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
