[package]
name = "mdk-storage-traits"
version = "0.5.0"
edition = "2021"
description = "Storage abstraction for nostr-mls that wraps OpenMLS storage backends"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.85.0"
keywords = ["nostr", "mls", "openmls"]

[features]
default = []
# Enabld test utils module
test-utils = ["dep:aes-gcm"]

[dependencies]
aes-gcm = { version = "0.10", optional = true }
nostr = { workspace = true, features = ["std"] }
openmls = { version = "0.7.0", default-features = false }
openmls_traits = { version = "0.4.0", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
mdk-sqlite-storage = { version = "0.5.0", path = "../mdk-sqlite-storage" }
mdk-memory-storage = { version = "0.5.0", path = "../mdk-memory-storage" }
openmls_memory_storage = "0.4"
