[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdk-python"
dynamic = ["version"]
description = "Python bindings for Marmot Development Kit - A Rust implementation of the Marmot Protocol for secure, decentralized group messaging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MDK Developers", email = "dev@ipf.dev" }]
keywords = ["nostr", "mls", "openmls", "messaging", "encryption", "marmot", "decentralized"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/marmot-protocol/mdk-python"
Repository = "https://github.com/marmot-protocol/mdk"
Documentation = "https://github.com/marmot-protocol/mdk-python"
"Bug Tracker" = "https://github.com/marmot-protocol/mdk/issues"
Changelog = "https://github.com/marmot-protocol/mdk/releases"

[tool.setuptools]
packages = ["mdk"]

[tool.setuptools.dynamic]
version = {attr = "mdk.version.__version__"}

[tool.setuptools.package-data]
mdk = ["libmdk_uniffi.so", "libmdk_uniffi.dylib", "mdk_uniffi.dll", "*.pyi", "py.typed"]
